# FastSearch

./: Cargo.toml  docker-compose.yml  openapi.yml
.github/workflows/: ci.yml  release.yml
codegen/: Cargo.toml  README.md
codegen/docs/: CollectionResponse.md  CollectionSchema.md  DocumentsApi.md  HealthApi.md  MultiSearchCollectionParameters.md  MultiSearchParameters.md  OperationsApi.md  SearchParameters.md
codegen/src/apis/: analytics_api.rs  collections_api.rs  configuration.rs  debug_api.rs  documents_api.rs  health_api.rs  keys_api.rs  operations_api.rs  override_api.rs  promote_api.rs
codegen/src/models/: analytics_rule_parameters.rs  analytics_rule_parameters_destination.rs  analytics_rule_parameters_source.rs  analytics_rule_schema.rs  analytics_rules_retrieve_schema.rs  api_key.rs  api_key_schema.rs  api_keys_response.rs  api_response.rs  collection_alias.rs  collection_alias_schema.rs  collection_aliases_response.rs  collection_response.rs  collection_schema.rs  collection_update_schema.rs  debug_200_response.rs  delete_documents_200_response.rs  delete_documents_delete_documents_parameters_parameter.rs  error_response.rs  export_documents_export_documents_parameters_parameter.rs  (+32 more)
derive/: Cargo.toml
derive/src/: lib.rs
fastsearch/: Cargo.toml
fastsearch-example/: .env  Cargo.toml
fastsearch-example/src/: main.rs
fastsearch/src/: collection_schema.rs  document.rs  keys.rs  lib.rs
mocks/: create_collection.yaml  drop_collection.yaml  import_documents.yaml  retrieve_all_collections.yaml  retrieve_collection.yaml  search_collection.yaml
(+17 files in other folders)
