[workspace]
members = [
    "fastsearch",
    "derive",
    "codegen"
, "fastsearch-example"]

resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/khulnasoft-lab/fastsearch-rust"
authors = ["Fastsearch  <contact@khulnasoft.com>"]

[workspace.dependencies]

fastsearch_derive = { path = "./derive", version = "0.3.0" }
fastsearch_codegen = { path = "./codegen", version = "0.25.0" }
